# OctoBot

./: .dockerignore  .gitignore  Cargo.toml  OctoBot.md  README.md  docker-compose.yml  features.json  pyproject.toml
backend/: __init__.py
backend/octobot_orchestrator/: __init__.py  contracts.py  env.py  main.py  providers.py  rag.py  storage.py
backend/octobot_orchestrator/agents/: __init__.py  base.py  graph.py
backend/octobot_orchestrator/indexer/: __init__.py  repository.py
backend/octobot_orchestrator/memory/: __init__.py  store.py
backend/octobot_orchestrator/plugins/: __init__.py  sdk.py
backend/octobot_orchestrator/runtime/: __init__.py  client.py  contracts.py  policy.py
backend/octobot_orchestrator/tools/: __init__.py  base.py  code_search.py  execution.py  filesystem.py  git_tools.py  registry.py
config/: orchestrator.example.env  production.env.example  services.deployment.json
docker/: frontend.Dockerfile  frontend.nginx.conf  nginx.conf  orchestrator.Dockerfile  runtime.Dockerfile
docs/: .~lock.OctoBot_Project_Overview.pptx#  OctoBot_Project_Overview.pptx  autonomous-platform.md  deployment.md  engineering-os-blueprint.md  phase-25-29-completion.md  quickstart.md  security-ui-test.md  user-guide.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
migrations/: 0001_persistent_intelligence.sql  0002_engineering_os.sql
octobot-web/: package-lock.json  package.json
octobot-web/src/: App.tsx  styles.css
octobot-web/src-tauri/: Cargo.toml  tauri.conf.json
reports/: report-1779759900096372522.json  report-1779804271516547926.json  report-1779804283878955718.json  report-1779804309798420388.json
scripts/: healthcheck.sh  install-linux.sh  start-dev.sh
src/: api.rs  constants.rs  main.rs  models.rs  reports.rs  runtime_service.rs  tests.rs  ui.rs  utils.rs
src/agents/: mod.rs
src/ai/: mod.rs
src/infra/: mod.rs
src/observability/: mod.rs
src/persistence/: mod.rs
src/platform/: mod.rs
src/plugins/: host.rs  registry.rs
src/remediation/: mod.rs
src/runtime/: mod.rs
src/security/: mod.rs
src/trace/: mod.rs
src/workflows/: mod.rs
tests/: test_autonomous_loop.py  test_observability_api.py  test_orchestrator_contracts.py  test_phase_19_23.py  test_plugin_sdk.py  test_tools.py
(+9 files in other folders)
