[package]
name = "OctoBot"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["ws"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3.31"
ollama-rs = { version = "0.3.4", default-features = false, features = ["stream"] }
rig = { package = "rig-core", version = "0.37.0" }
swarms-rs = "0.2.1"
async-channel = "2.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "json", "migrate", "macros", "chrono"] }
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
