[project]
name = "octobot-autonomous-platform"
version = "0.1.0"
description = "Python orchestration layer for OctoBot autonomous coding agents."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "gitpython>=3.1.43",
    "langgraph>=0.2.60",
    "pydantic>=2.8.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.52.0",
    "openai>=1.80.0",
]
indexing = [
    "tree-sitter>=0.22.0",
]
rag = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]
all = [
    "octobot-autonomous-platform[ai,indexing,rag]",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
